# chess_ai

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  format.sh  setup.sh
src/: main.cpp
src/algo/: abminimaxalgo.cpp  abminimaxalgo.hpp  algo.hpp  minimaxalgo.cpp  minimaxalgo.hpp
src/common/: threadsafequeue.hpp
src/evaluator/: eval_constants.hpp  evaluator.cpp  evaluator.hpp
src/gamemanager/: gamemanager.cpp  gamemanager.hpp
test/: abpminimax_test.cpp  hello_test.cpp
